# gundua

./: README.md  readme.md
apis/: app.py  editor.sh  qcode.sh  readme.md  sample.txt  studio.sh
backend/: readme.md
backend/elasticsearch/: readme.md
backend/kibana/: readme.md
backend/pgsync/: readme.md
backend/pgsync/env/: .env  readme.md
backend/pgsync/schema/: readme.md  schema.json
backend/postgresql14/: readme.md
backend/redis/: readme.md
dirs/: readme.md
dirs/live/: live.md  live.txt
dirs/qrcode/: qrcode.txt
dirs/uploads/: upload.md  upload.txt
dirs/uploads/permanent/: permanent.md  permanent.txt
dirs/uploads/permanent/billboard/: billboard.md  billboard.txt
dirs/uploads/permanent/profile/: profile.md  profile.txt
dirs/uploads/temporary/: temporary.md  temporary.txt
dirs/uploads/temporary/advert/: advert.md  advert.txt
qrcode/: CMakeLists.txt  readme.md
qrcode/libs/: libs.md
qrcode/libs/generator/: CMakeLists.txt
qrcode/libs/png/: CMakeLists.txt
qrcode/src/: CMakeLists.txt  main.cpp
schedular/: CMakeLists.txt  build.md  main.cpp  readme.md
schedular/include/libcron/: libron.md
schedular/src/: src.md
screen/: CMakeLists.txt  main.cpp  readm.md  readme.md  requirements.txt
web/: index.html  web.md
web/admin/: index.html
web/admin/users/: index.html
web/agent/: index.html
web/apis/: admin.js  agent.js  billboard.js  campaign.js  client.js  edge.js  login.js  register.js  schedular.js  users.js
web/assets/: assets.md
web/assets/vendors/: vendors.md
web/client/: index.html
web/client/campaigns/new/: index.html
web/css/: schedular.css  style.css
